# hw_web_7_sqlalchemy

./: .env  alembic.ini  config.py  db.py  my_select.py  pyproject.toml  seed.py
migrations/versions/: 0d96db929f48_init.py
